- Added Product crud

--- a/rest_api/templates/store/nav.html
+++ b/rest_api/templates/store/nav.html
@@ -5,5 +5,5 @@
     <a href="/v1/store/products/new">Add Item</a>
     <a href="/v1/store/products">List Items</a>
     <a href="#">Orders</a>
-    <a href="con.html">Contact</a>
+    <a href="#">Contact</a>
 </nav>
