- Added Product crud

--- a/rest_api/templates/store/nav.html
+++ b/rest_api/templates/store/nav.html
@@ -1,5 +1,5 @@
 <nav class="sideBar">
-    <a class="selected" href="#">Admin Panel</a>
+    <a class="selected" href="/v1/store">Admin Panel</a>
     <a href="/v1/store/categories/new">Add Category</a>
     <a href="/v1/store/categories/new">List Categories</a>
     <a href="/v1/store/products/new">Add Item</a>
