- added new endpoints

--- a/rest_api/templates/store/nav.html
+++ b/rest_api/templates/store/nav.html
@@ -1,7 +1,7 @@
 <nav class="sideBar">
     <a class="selected" href="/v1/store">Admin Panel</a>
     <a href="/v1/store/categories/new">Add Category</a>
-    <a href="/v1/store/categories/new">List Categories</a>
+    <a href="/v1/store/categories">List Categories</a>
     <a href="/v1/store/products/new">Add Item</a>
     <a href="/v1/store/products">List Items</a>
     <a href="#">Orders</a>
