--- a/rest_api/templates/store/update_product.html
+++ b/rest_api/templates/store/update_product.html
@@ -66,7 +66,7 @@
 {% include "store/nav.html" %}
 
 <div class="content">
-    <h1>Add New Food Item</h1>
+    <h1>Update Food Item</h1>
 
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
