--- a/rest_api/templates/store/list_categories.html
+++ b/rest_api/templates/store/list_categories.html
@@ -66,13 +66,19 @@
 {% include "store/nav.html" %}
 
 <div class="content">
-    <h1>Add A New Category</h1>
+    <h1>All Categories</h1>
 
-    <form action="" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Add Category">
-    </form>
+    {% for cat in food_categories %}
+        <div class="card" style="width: 18rem; margin-top: 5px">
+            <div class="card-body">
+                <h5 class="card-title">{{ cat.name }}</h5>
+            </div>
+            <div class="card-body">
+                <a href="/v1/store/categories/delete/{{ cat.id }}" class="card-link">Delete</a>
+                <a href="/v1/store/categories/update/{{ cat.id }}" class="card-link">Edit</a>
+            </div>
+        </div>
+    {% endfor %}
 </div>
 </body>
 </html>
