--- a/rest_api/templates/store/update_category.html
+++ b/rest_api/templates/store/update_category.html
@@ -66,12 +66,12 @@
 {% include "store/nav.html" %}
 
 <div class="content">
-    <h1>Add A New Category</h1>
+    <h1>Update Category</h1>
 
-    <form action="" method="post">
+    <form action="" method="post" enctype="application/x-www-form-urlencoded">
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Add Category">
+        {{ form.as_p }}
+        <input type="submit" value="Update">
     </form>
 </div>
 </body>
