--- a/rest_api/templates/store/nav.html
+++ b/rest_api/templates/store/nav.html
@@ -3,7 +3,7 @@
     <a href="/v1/store/categories/new">Add Category</a>
     <a href="/v1/store/categories">List Categories</a>
     <a href="/v1/store/products/new">Add Item</a>
-    <a href="/v1/store/products">List Items</a>
-    <a href="#">Orders</a>
+    <a href="/v1/store/products/">List Items</a>
+    <a href="/v1/store/requests/">Orders</a>
     <a href="#">Contact</a>
 </nav>
